--- a/templates/game/edit.html
+++ b/templates/game/edit.html
@@ -3,50 +3,84 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Editing Coinche "{{.Name}}"</title>
-<link rel="stylesheet" href="/coinche/assets/css/main.css">
+<title>Modifier la partie de Coinche "{{.Name}}"</title>
+
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"  media="screen,projection">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
 </head>
 <body>
 
-<h1>Editing Coinche "{{.Name}}"</h1>
+<div class="container">
+
+<h2 class="flow-text">Modifier la partie de Coinche</h2>
 
 <form action="/coinche/game/save" method="POST">
-<p>
-  <table>
-    <tr>
-      <th>Coinche name:</th><td><input type="text" name="gameName" value="{{.Name}}"></td>
-    </tr>
-  </table>
-</p>
-<p>
-  <h3>Team Nord-Sud:</h3>
-  <table>
-    <tr>
-      <th>Nord:</th><td><input type="text" name="nordName" value="{{.NordName}}"></td>
-    </tr>
-    <tr>
-      <th>Sud:</th><td><input type="text" name="sudName" value="{{.SudName}}"></td>
-    </tr>
-  </table>
-</p>
-<p>
-  <h3>Team Est-Ouest:</h3>
-  <table>
-    <tr>
-      <th>Est:</th><td><input type="text" name="estName" value="{{.EstName}}"></td>
-    </tr>
-    <tr>
-      <th>Ouest:</th><td><input type="text" name="ouestName" value="{{.OuestName}}"></td>
-    </tr>
-  </table>
-</p>
+
+<div class="row">
+  <div class="input-field col s12">
+    <i class="material-icons prefix">edit</i>
+    <input type="text" name="gameName" id="gameName" value="{{.Name}}">
+    <label for="gameName">Nom de la partie</label>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col s12">
+    <h5 class="left-align flow-text">Equipe Nord-Sud :</h5>
+  </div>
+</div>
+
+<div class="row">
+  <div class="input-field col s12 m6 l6">
+    <i class="material-icons prefix">face</i>
+    <input type="text" name="nordName" id="nordName" value="{{.NordName}}">
+    <label for="nordName">Joueur Nord</label>
+  </div>
+  <div class="input-field col s12 m6 l6">
+    <i class="material-icons prefix">face</i>
+    <input type="text" name="sudName" id="sudName" value="{{.SudName}}">
+    <label for="sudName">Joueur Sud</label>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col s12">
+    <h5 class="left-align flow-text">Equipe Est-Ouest :</h5>
+  </div>
+</div>
+
+<div class="row">
+  <div class="input-field col s12 m6 l6">
+    <i class="material-icons prefix">face</i>
+    <input type="text" name="estName" id="estName" value="{{.EstName}}">
+    <label for="estName">Joueur Est</label>
+  </div>
+  <div class="input-field col s12 m6 l6">
+    <i class="material-icons prefix">face</i>
+    <input type="text" name="ouestName" id="ouestName" value="{{.OuestName}}">
+    <label for="ouestName">Joueur Ouest</label>
+  </div>
+</div>
+
 <input type="hidden" name="nordId" value="{{.NordId}}">
 <input type="hidden" name="sudId" value="{{.SudId}}">
 <input type="hidden" name="estId" value="{{.EstId}}">
 <input type="hidden" name="ouestId" value="{{.OuestId}}">
 <input type="hidden" name="gameId" value="{{.Id}}">
-<input type="submit" value="Save">
+
+<div class="row">
+  <div class="col s6 offset-s6 right-align">
+    <button type="submit" class="waves-effect waves-light btn"><i class="material-icons right">send</i>Sauvegarder</button>
+  </div>
+</div>
+
 </form>
+
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 </body>
 </html>
