--- a/templates/index.html
+++ b/templates/index.html
@@ -3,45 +3,78 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Create a coinche game</title>
-<link rel="stylesheet" href="/coinche/assets/css/main.css">
+<title>Nouvelle partie de Coinche</title>
+
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"  media="screen,projection">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
 </head>
 <body>
 
-<h1>Create a coinche game</h1>
+<div class="container">
+
+<h2 class="flow-text">Nouvelle partie de Coinche</h2>
 
 <form action="/coinche/game/save" method="POST">
-<p>
-  <table>
-    <tr>
-      <th>Coinche name:</th><td><input type="text" name="gameName" value=""></td>
-    </tr>
-  </table>
-</p>
-<p>
-  <h3>Team Nord-Sud:</h3>
-  <table>
-    <tr>
-      <th>Nord:</th><td><input type="text" name="nordName" value=""></td>
-    </tr>
-    <tr>
-      <th>Sud:</th><td><input type="text" name="sudName" value=""></td>
-    </tr>
-  </table>
-</p>
-<p>
-  <h3>Team Est-Ouest:</h3>
-  <table>
-    <tr>
-      <th>Est:</th><td><input type="text" name="estName" value=""></td>
-    </tr>
-    <tr>
-      <th>Ouest:</th><td><input type="text" name="ouestName" value=""></td>
-    </tr>
-  </table>
-</p>
-<input type="submit" value="Create">
+
+<div class="row">
+  <div class="input-field col s12">
+    <i class="material-icons prefix medium">edit</i>
+    <input type="text" name="gameName" id="gameName" value="">
+    <label for="gameName">Nom de la partie</label>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col s12">
+    <h5 class="left-align flow-text">Equipe Nord-Sud :</h5>
+  </div>
+</div>
+
+<div class="row">
+  <div class="input-field col s12 m6 l6">
+    <i class="material-icons prefix">face</i>
+    <input type="text" name="nordName" id="nordName" value="">
+    <label for="nordName">Joueur Nord</label>
+  </div>
+  <div class="input-field col s12 m6 l6">
+    <i class="material-icons prefix">face</i>
+    <input type="text" name="sudName" id="sudName" value="">
+    <label for="sudName">Joueur Sud</label>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col s12">
+    <h5 class="left-align flow-text">Equipe Est-Ouest :</h5>
+  </div>
+</div>
+
+<div class="row">
+  <div class="input-field col s12 m6 l6">
+    <i class="material-icons prefix">face</i>
+    <input type="text" name="estName" id="estName" value="">
+    <label for="estName">Joueur Est</label>
+  </div>
+  <div class="input-field col s12 m6 l6">
+    <i class="material-icons prefix">face</i>
+    <input type="text" name="ouestName" id="ouestName" value="">
+    <label for="ouestName">Joueur Ouest</label>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col s6 offset-s6 right-align">
+    <button type="submit" class="waves-effect waves-light btn"><i class="material-icons right">send</i>Créer</button>
+  </div>
+</div>
+
 </form>
+
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 </body>
 </html>
