--- a/templates/player/view.html
+++ b/templates/player/view.html
@@ -149,6 +149,7 @@ var sortablePlayMat = new Sortable(playMat, {
 });
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="/coinche/assets/js/ws.js"></script>
 
 </body>
 </html>
