Count every distributions in a game

--- a/templates/game/edit.html
+++ b/templates/game/edit.html
@@ -69,6 +69,7 @@
 <input type="hidden" name="estId" value="{{.EstId}}">
 <input type="hidden" name="ouestId" value="{{.OuestId}}">
 <input type="hidden" name="gameId" value="{{.Id}}">
+<input type="hidden" name="gameDistribNb" value="{{.DistribNb}}">
 
 <div class="row">
   <div class="col s6 offset-s6 right-align">
