--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,7 @@
 
 <div class="row">
   <div class="col s6 offset-s6 right-align">
+    <input type="hidden" name="gameDistribNb" id="gameDistribNb" value="0">
     <button type="submit" class="waves-effect waves-light btn"><i class="material-icons right">send</i>Créer</button>
   </div>
 </div>
