Set default values to the game

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 <div class="row">
   <div class="input-field col s12">
     <i class="material-icons prefix medium">edit</i>
-    <input type="text" name="gameName" id="gameName" value="">
+    <input type="text" name="gameName" id="gameName" value="Rogue One">
     <label for="gameName">Nom de la partie</label>
   </div>
 </div>
@@ -35,12 +35,12 @@
 <div class="row">
   <div class="input-field col s12 m6 l6">
     <i class="material-icons prefix">face</i>
-    <input type="text" name="nordName" id="nordName" value="">
+    <input type="text" name="nordName" id="nordName" value="Nord">
     <label for="nordName">Joueur Nord</label>
   </div>
   <div class="input-field col s12 m6 l6">
     <i class="material-icons prefix">face</i>
-    <input type="text" name="sudName" id="sudName" value="">
+    <input type="text" name="sudName" id="sudName" value="Sud">
     <label for="sudName">Joueur Sud</label>
   </div>
 </div>
@@ -54,12 +54,12 @@
 <div class="row">
   <div class="input-field col s12 m6 l6">
     <i class="material-icons prefix">face</i>
-    <input type="text" name="estName" id="estName" value="">
+    <input type="text" name="estName" id="estName" value="Est">
     <label for="estName">Joueur Est</label>
   </div>
   <div class="input-field col s12 m6 l6">
     <i class="material-icons prefix">face</i>
-    <input type="text" name="ouestName" id="ouestName" value="">
+    <input type="text" name="ouestName" id="ouestName" value="Ouest">
     <label for="ouestName">Joueur Ouest</label>
   </div>
 </div>
