Open player page in new browser tab

--- a/templates/game/view.html
+++ b/templates/game/view.html
@@ -27,11 +27,11 @@
 <div class="row">
   <div class="input-field col s12 m6 l6">
     <i class="material-icons left">face</i>
-    Joueur Nord : <a href="/coinche/player/{{.NordId}}">{{.NordName}}</a>
+    Joueur Nord : <a href="/coinche/player/{{.NordId}}" target="_blank">{{.NordName}}</a>
   </div>
   <div class="input-field col s12 m6 l6">
     <i class="material-icons left">face</i>
-    Joueur Sud : <a href="/coinche/player/{{.SudId}}">{{.SudName}}</a>
+    Joueur Sud : <a href="/coinche/player/{{.SudId}}" target="_blank">{{.SudName}}</a>
   </div>
 </div>
 
@@ -44,11 +44,11 @@
 <div class="row">
   <div class="input-field col s12 m6 l6">
     <i class="material-icons left">face</i>
-    Joueur Est : <a href="/coinche/player/{{.EstId}}">{{.EstName}}</a>
+    Joueur Est : <a href="/coinche/player/{{.EstId}}" target="_blank">{{.EstName}}</a>
   </div>
   <div class="input-field col s12 m6 l6">
     <i class="material-icons left">face</i>
-    Joueur Ouest : <a href="/coinche/player/{{.OuestId}}">{{.OuestName}}</a>
+    Joueur Ouest : <a href="/coinche/player/{{.OuestId}}" target="_blank">{{.OuestName}}</a>
   </div>
 </div>
 
