Add team name in websocket mesages

--- a/templates/player/view.html
+++ b/templates/player/view.html
@@ -125,6 +125,7 @@
 <input type="hidden" name="playerId" id="playerId" value="{{.Player.Id}}">
 <input type="hidden" name="playerName" id="playerName" value="{{.Player.Name}}">
 <input type="hidden" name="playerAlias" id="playerAlias" value="{{.Player.Alias}}">
+<input type="hidden" name="playerTeam" id="playerTeam" value="{{.Player.Team}}">
 
 <div class="row">
   <div class="col s12 center">
